Prevent long emails from overflowing flex container

--- a/src/app/pages/show-details-container/components/review/review.component.scss
+++ b/src/app/pages/show-details-container/components/review/review.component.scss
@@ -32,9 +32,9 @@
 
 .info {
 	flex: 1;
-	padding-right: 20px;
 	display: flex;
 	align-items: center;
+	padding-right: 25px;
 	p {
 		margin: 0;
 	}
@@ -56,9 +56,7 @@
 }
 
 .user-rating {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
+	min-width: 0;
 	width: 100%;
 	p {
 		width: 100%;
